findbugs #1
git-svn-id: file:///root/var/svn/aranea/branches/change_113@1572 baba0d3d-6527-0410-ba98-ffd8059025de