@@ -64,7 +64,7 @@ public class LikeExpression implements CompositeExpression, StringExpression {
 
 	public Object evaluate(VariableResolver resolver)
 	throws ExpressionEvaluationException {
-		return new Boolean(RegexpLikeUtil.isLike(convert(this.expr.evaluate(resolver)),
+		return Boolean.valueOf(RegexpLikeUtil.isLike(convert(this.expr.evaluate(resolver)),
 				convert(this.mask.getValue()), this.ignoreCase, this.configuration));
 	}
 	
